scrap-lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement
Rule 3     bloc -> statement
Rule 4     statement -> NAME EQUALS expression SEMI
Rule 5     statement -> NAME EQUALS expression
Rule 6     statement -> WHILE expression RACC bloc LACC
Rule 7     statement -> FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
Rule 8     statement -> COMMENTS
Rule 9     statement -> IF expression THEN statement
Rule 10    statement -> IF expression THEN RACC bloc LACC
Rule 11    statement -> IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 12    statement -> IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 13    statement -> PRINT LPAREN expression RPAREN SEMI
Rule 14    statement -> PRINT STRING SEMI
Rule 15    print_params -> expression
Rule 16    print_params -> expression COMMA print_params
Rule 17    statement -> PRINT LPAREN print_params RPAREN SEMI
Rule 18    params -> NAME
Rule 19    params -> NAME COMMA params
Rule 20    statement -> expression INFF statement
Rule 21    statement -> expression SUP statement
Rule 22    statement -> expression and statement
Rule 23    statement -> expression or statement
Rule 24    statement -> expression SEMI
Rule 25    statement -> RETURN expression SEMI
Rule 26    statement -> FUNCTION NAME LPAREN RPAREN START bloc END
Rule 27    statement -> FUNCTION NAME LPAREN params RPAREN START bloc END
Rule 28    statement -> params EQUALS param_call SEMI
Rule 29    statement -> NAME LPAREN RPAREN SEMI
Rule 30    statement -> NAME LPAREN param_call RPAREN SEMI
Rule 31    param_call -> expression
Rule 32    param_call -> expression COMMA param_call
Rule 33    statement -> DEFINE NAME EQUALS expression SEMI
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression TIMES expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> expression or expression
Rule 39    expression -> expression and expression
Rule 40    expression -> expression SUP expression
Rule 41    expression -> expression INFF expression
Rule 42    expression -> expression ISEQUAL expression
Rule 43    expression -> expression NOTEQUAL expression
Rule 44    expression -> expression ET expression
Rule 45    expression -> expression OU expression
Rule 46    statement -> NAME INCR SEMI
Rule 47    statement -> NAME DECR SEMI
Rule 48    statement -> NAME INCR
Rule 49    statement -> NAME DECR
Rule 50    statement -> NAME PLUSEQ NUMBER SEMI
Rule 51    statement -> NAME MINEQ NUMBER SEMI
Rule 52    statement -> NAME PLUSEQ NUMBER
Rule 53    statement -> NAME MINEQ NUMBER
Rule 54    expression -> MINUS expression
Rule 55    expression -> LPAREN expression RPAREN
Rule 56    expression -> NUMBER
Rule 57    expression -> STRING
Rule 58    expression -> NAME

Terminals, with rules where they appear

COMMA                : 7 16 19 32
COMMENT              : 
COMMENTS             : 8
DECR                 : 47 49
DEFINE               : 33
DIVIDE               : 37
ELSE                 : 11 12
ELSEIF               : 11
END                  : 26 27
EQUALS               : 4 5 28 33
ET                   : 44
FOR                  : 7
FUNCTION             : 26 27
IF                   : 9 10 11 12
INCR                 : 46 48
INFF                 : 20 41
ISEQUAL              : 42
LACC                 : 6 7 10 11 11 11 12 12
LPAREN               : 7 13 17 26 27 29 30 55
MINEQ                : 51 53
MINUS                : 35 54
NAME                 : 4 5 18 19 26 27 29 30 33 46 47 48 49 50 51 52 53 58
NOTEQUAL             : 43
NUMBER               : 7 50 51 52 53 56
OU                   : 45
PLUS                 : 34
PLUSEQ               : 50 52
PRINT                : 13 14 17
RACC                 : 6 7 10 11 11 11 12 12
RETURN               : 25
RPAREN               : 7 13 17 26 27 29 30 55
SEMI                 : 4 13 14 17 24 25 28 29 30 33 46 47 50 51
START                : 26 27
STRING               : 14 57
SUP                  : 21 40
THEN                 : 9 10 11 11 12
TIMES                : 36
TO                   : 7
WHILE                : 6
and                  : 22 39
error                : 
or                   : 23 38

Nonterminals, with rules where they appear

bloc                 : 1 2 6 7 10 11 11 11 12 12 26 27
expression           : 4 5 6 9 10 11 11 12 13 15 16 20 21 22 23 24 25 31 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 54 55
param_call           : 28 30 32
params               : 19 27 28
print_params         : 16 17
start                : 0
statement            : 2 3 7 7 9 20 21 22 23

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement
    (3) bloc -> . statement
    (4) statement -> . NAME EQUALS expression SEMI
    (5) statement -> . NAME EQUALS expression
    (6) statement -> . WHILE expression RACC bloc LACC
    (7) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (8) statement -> . COMMENTS
    (9) statement -> . IF expression THEN statement
    (10) statement -> . IF expression THEN RACC bloc LACC
    (11) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . PRINT LPAREN expression RPAREN SEMI
    (14) statement -> . PRINT STRING SEMI
    (17) statement -> . PRINT LPAREN print_params RPAREN SEMI
    (20) statement -> . expression INFF statement
    (21) statement -> . expression SUP statement
    (22) statement -> . expression and statement
    (23) statement -> . expression or statement
    (24) statement -> . expression SEMI
    (25) statement -> . RETURN expression SEMI
    (26) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (27) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (28) statement -> . params EQUALS param_call SEMI
    (29) statement -> . NAME LPAREN RPAREN SEMI
    (30) statement -> . NAME LPAREN param_call RPAREN SEMI
    (33) statement -> . DEFINE NAME EQUALS expression SEMI
    (46) statement -> . NAME INCR SEMI
    (47) statement -> . NAME DECR SEMI
    (48) statement -> . NAME INCR
    (49) statement -> . NAME DECR
    (50) statement -> . NAME PLUSEQ NUMBER SEMI
    (51) statement -> . NAME MINEQ NUMBER SEMI
    (52) statement -> . NAME PLUSEQ NUMBER
    (53) statement -> . NAME MINEQ NUMBER
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression or expression
    (39) expression -> . expression and expression
    (40) expression -> . expression SUP expression
    (41) expression -> . expression INFF expression
    (42) expression -> . expression ISEQUAL expression
    (43) expression -> . expression NOTEQUAL expression
    (44) expression -> . expression ET expression
    (45) expression -> . expression OU expression
    (54) expression -> . MINUS expression
    (55) expression -> . LPAREN expression RPAREN
    (56) expression -> . NUMBER
    (57) expression -> . STRING
    (58) expression -> . NAME
    (18) params -> . NAME
    (19) params -> . NAME COMMA params

    NAME            shift and go to state 4
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    COMMENTS        shift and go to state 10
    IF              shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 14
    FUNCTION        shift and go to state 15
    DEFINE          shift and go to state 17
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 13

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5
    params                         shift and go to state 16

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement
    (4) statement -> . NAME EQUALS expression SEMI
    (5) statement -> . NAME EQUALS expression
    (6) statement -> . WHILE expression RACC bloc LACC
    (7) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (8) statement -> . COMMENTS
    (9) statement -> . IF expression THEN statement
    (10) statement -> . IF expression THEN RACC bloc LACC
    (11) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . PRINT LPAREN expression RPAREN SEMI
    (14) statement -> . PRINT STRING SEMI
    (17) statement -> . PRINT LPAREN print_params RPAREN SEMI
    (20) statement -> . expression INFF statement
    (21) statement -> . expression SUP statement
    (22) statement -> . expression and statement
    (23) statement -> . expression or statement
    (24) statement -> . expression SEMI
    (25) statement -> . RETURN expression SEMI
    (26) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (27) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (28) statement -> . params EQUALS param_call SEMI
    (29) statement -> . NAME LPAREN RPAREN SEMI
    (30) statement -> . NAME LPAREN param_call RPAREN SEMI
    (33) statement -> . DEFINE NAME EQUALS expression SEMI
    (46) statement -> . NAME INCR SEMI
    (47) statement -> . NAME DECR SEMI
    (48) statement -> . NAME INCR
    (49) statement -> . NAME DECR
    (50) statement -> . NAME PLUSEQ NUMBER SEMI
    (51) statement -> . NAME MINEQ NUMBER SEMI
    (52) statement -> . NAME PLUSEQ NUMBER
    (53) statement -> . NAME MINEQ NUMBER
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression or expression
    (39) expression -> . expression and expression
    (40) expression -> . expression SUP expression
    (41) expression -> . expression INFF expression
    (42) expression -> . expression ISEQUAL expression
    (43) expression -> . expression NOTEQUAL expression
    (44) expression -> . expression ET expression
    (45) expression -> . expression OU expression
    (54) expression -> . MINUS expression
    (55) expression -> . LPAREN expression RPAREN
    (56) expression -> . NUMBER
    (57) expression -> . STRING
    (58) expression -> . NAME
    (18) params -> . NAME
    (19) params -> . NAME COMMA params

    $end            reduce using rule 1 (start -> bloc .)
    NAME            shift and go to state 4
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    COMMENTS        shift and go to state 10
    IF              shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 14
    FUNCTION        shift and go to state 15
    DEFINE          shift and go to state 17
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 13

    statement                      shift and go to state 19
    expression                     shift and go to state 5
    params                         shift and go to state 16

state 3

    (3) bloc -> statement .

    NAME            reduce using rule 3 (bloc -> statement .)
    WHILE           reduce using rule 3 (bloc -> statement .)
    FOR             reduce using rule 3 (bloc -> statement .)
    COMMENTS        reduce using rule 3 (bloc -> statement .)
    IF              reduce using rule 3 (bloc -> statement .)
    PRINT           reduce using rule 3 (bloc -> statement .)
    RETURN          reduce using rule 3 (bloc -> statement .)
    FUNCTION        reduce using rule 3 (bloc -> statement .)
    DEFINE          reduce using rule 3 (bloc -> statement .)
    MINUS           reduce using rule 3 (bloc -> statement .)
    LPAREN          reduce using rule 3 (bloc -> statement .)
    NUMBER          reduce using rule 3 (bloc -> statement .)
    STRING          reduce using rule 3 (bloc -> statement .)
    $end            reduce using rule 3 (bloc -> statement .)
    LACC            reduce using rule 3 (bloc -> statement .)
    END             reduce using rule 3 (bloc -> statement .)


state 4

    (4) statement -> NAME . EQUALS expression SEMI
    (5) statement -> NAME . EQUALS expression
    (29) statement -> NAME . LPAREN RPAREN SEMI
    (30) statement -> NAME . LPAREN param_call RPAREN SEMI
    (46) statement -> NAME . INCR SEMI
    (47) statement -> NAME . DECR SEMI
    (48) statement -> NAME . INCR
    (49) statement -> NAME . DECR
    (50) statement -> NAME . PLUSEQ NUMBER SEMI
    (51) statement -> NAME . MINEQ NUMBER SEMI
    (52) statement -> NAME . PLUSEQ NUMBER
    (53) statement -> NAME . MINEQ NUMBER
    (58) expression -> NAME .
    (18) params -> NAME .
    (19) params -> NAME . COMMA params

  ! shift/reduce conflict for EQUALS resolved as shift
    EQUALS          shift and go to state 20
    LPAREN          shift and go to state 21
    INCR            shift and go to state 22
    DECR            shift and go to state 23
    PLUSEQ          shift and go to state 24
    MINEQ           shift and go to state 25
    INFF            reduce using rule 58 (expression -> NAME .)
    SUP             reduce using rule 58 (expression -> NAME .)
    and             reduce using rule 58 (expression -> NAME .)
    or              reduce using rule 58 (expression -> NAME .)
    SEMI            reduce using rule 58 (expression -> NAME .)
    PLUS            reduce using rule 58 (expression -> NAME .)
    MINUS           reduce using rule 58 (expression -> NAME .)
    TIMES           reduce using rule 58 (expression -> NAME .)
    DIVIDE          reduce using rule 58 (expression -> NAME .)
    ISEQUAL         reduce using rule 58 (expression -> NAME .)
    NOTEQUAL        reduce using rule 58 (expression -> NAME .)
    ET              reduce using rule 58 (expression -> NAME .)
    OU              reduce using rule 58 (expression -> NAME .)
    COMMA           shift and go to state 26

  ! EQUALS          [ reduce using rule 18 (params -> NAME .) ]


state 5

    (20) statement -> expression . INFF statement
    (21) statement -> expression . SUP statement
    (22) statement -> expression . and statement
    (23) statement -> expression . or statement
    (24) statement -> expression . SEMI
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . TIMES expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . or expression
    (39) expression -> expression . and expression
    (40) expression -> expression . SUP expression
    (41) expression -> expression . INFF expression
    (42) expression -> expression . ISEQUAL expression
    (43) expression -> expression . NOTEQUAL expression
    (44) expression -> expression . ET expression
    (45) expression -> expression . OU expression

    INFF            shift and go to state 27
    SUP             shift and go to state 28
    and             shift and go to state 29
    or              shift and go to state 30
    SEMI            shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    ISEQUAL         shift and go to state 36
    NOTEQUAL        shift and go to state 37
    ET              shift and go to state 38
    OU              shift and go to state 39


state 6

    (6) statement -> WHILE . expression RACC bloc LACC
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression or expression
    (39) expression -> . expression and expression
    (40) expression -> . expression SUP expression
    (41) expression -> . expression INFF expression
    (42) expression -> . expression ISEQUAL expression
    (43) expression -> . expression NOTEQUAL expression
    (44) expression -> . expression ET expression
    (45) expression -> . expression OU expression
    (54) expression -> . MINUS expression
    (55) expression -> . LPAREN expression RPAREN
    (56) expression -> . NUMBER
    (57) expression -> . STRING
    (58) expression -> . NAME

    MINUS           shift and go to state 18
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 13
    NAME            shift and go to state 41

    expression                     shift and go to state 40

state 7

    (7) statement -> FOR . LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC

    LPAREN          shift and go to state 42


state 8

    (55) expression -> LPAREN . expression RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression or expression
    (39) expression -> . expression and expression
    (40) expression -> . expression SUP expression
    (41) expression -> . expression INFF expression
    (42) expression -> . expression ISEQUAL expression
    (43) expression -> . expression NOTEQUAL expression
    (44) expression -> . expression ET expression
    (45) expression -> . expression OU expression
    (54) expression -> . MINUS expression
    (55) expression -> . LPAREN expression RPAREN
    (56) expression -> . NUMBER
    (57) expression -> . STRING
    (58) expression -> . NAME

    MINUS           shift and go to state 18
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 13
    NAME            shift and go to state 41

    expression                     shift and go to state 43

state 9

    (56) expression -> NUMBER .

    INFF            reduce using rule 56 (expression -> NUMBER .)
    SUP             reduce using rule 56 (expression -> NUMBER .)
    and             reduce using rule 56 (expression -> NUMBER .)
    or              reduce using rule 56 (expression -> NUMBER .)
    SEMI            reduce using rule 56 (expression -> NUMBER .)
    PLUS            reduce using rule 56 (expression -> NUMBER .)
    MINUS           reduce using rule 56 (expression -> NUMBER .)
    TIMES           reduce using rule 56 (expression -> NUMBER .)
    DIVIDE          reduce using rule 56 (expression -> NUMBER .)
    ISEQUAL         reduce using rule 56 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 56 (expression -> NUMBER .)
    ET              reduce using rule 56 (expression -> NUMBER .)
    OU              reduce using rule 56 (expression -> NUMBER .)
    RACC            reduce using rule 56 (expression -> NUMBER .)
    RPAREN          reduce using rule 56 (expression -> NUMBER .)
    THEN            reduce using rule 56 (expression -> NUMBER .)
    NAME            reduce using rule 56 (expression -> NUMBER .)
    WHILE           reduce using rule 56 (expression -> NUMBER .)
    FOR             reduce using rule 56 (expression -> NUMBER .)
    COMMENTS        reduce using rule 56 (expression -> NUMBER .)
    IF              reduce using rule 56 (expression -> NUMBER .)
    PRINT           reduce using rule 56 (expression -> NUMBER .)
    RETURN          reduce using rule 56 (expression -> NUMBER .)
    FUNCTION        reduce using rule 56 (expression -> NUMBER .)
    DEFINE          reduce using rule 56 (expression -> NUMBER .)
    LPAREN          reduce using rule 56 (expression -> NUMBER .)
    NUMBER          reduce using rule 56 (expression -> NUMBER .)
    STRING          reduce using rule 56 (expression -> NUMBER .)
    $end            reduce using rule 56 (expression -> NUMBER .)
    TO              reduce using rule 56 (expression -> NUMBER .)
    LACC            reduce using rule 56 (expression -> NUMBER .)
    END             reduce using rule 56 (expression -> NUMBER .)
    COMMA           reduce using rule 56 (expression -> NUMBER .)


state 10

    (8) statement -> COMMENTS .

    NAME            reduce using rule 8 (statement -> COMMENTS .)
    WHILE           reduce using rule 8 (statement -> COMMENTS .)
    FOR             reduce using rule 8 (statement -> COMMENTS .)
    COMMENTS        reduce using rule 8 (statement -> COMMENTS .)
    IF              reduce using rule 8 (statement -> COMMENTS .)
    PRINT           reduce using rule 8 (statement -> COMMENTS .)
    RETURN          reduce using rule 8 (statement -> COMMENTS .)
    FUNCTION        reduce using rule 8 (statement -> COMMENTS .)
    DEFINE          reduce using rule 8 (statement -> COMMENTS .)
    MINUS           reduce using rule 8 (statement -> COMMENTS .)
    LPAREN          reduce using rule 8 (statement -> COMMENTS .)
    NUMBER          reduce using rule 8 (statement -> COMMENTS .)
    STRING          reduce using rule 8 (statement -> COMMENTS .)
    $end            reduce using rule 8 (statement -> COMMENTS .)
    TO              reduce using rule 8 (statement -> COMMENTS .)
    LACC            reduce using rule 8 (statement -> COMMENTS .)
    END             reduce using rule 8 (statement -> COMMENTS .)
    RPAREN          reduce using rule 8 (statement -> COMMENTS .)


state 11

    (9) statement -> IF . expression THEN statement
    (10) statement -> IF . expression THEN RACC bloc LACC
    (11) statement -> IF . expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> IF . expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression or expression
    (39) expression -> . expression and expression
    (40) expression -> . expression SUP expression
    (41) expression -> . expression INFF expression
    (42) expression -> . expression ISEQUAL expression
    (43) expression -> . expression NOTEQUAL expression
    (44) expression -> . expression ET expression
    (45) expression -> . expression OU expression
    (54) expression -> . MINUS expression
    (55) expression -> . LPAREN expression RPAREN
    (56) expression -> . NUMBER
    (57) expression -> . STRING
    (58) expression -> . NAME

    MINUS           shift and go to state 18
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 9
    STRING          shift and go to state 13
    NAME            shift and go to state 41

    expression                     shift and go to state 44

state 12

    (13) statement -> PRINT . LPAREN expression RPAREN SEMI
    (14) statement -> PRINT . STRING SEMI
    (17) statement -> PRINT . LPAREN print_params RPAREN SEMI

    LPAREN          shift and go to state 45
    STRING          shift and go to state 46


state 13

    (57) expression -> STRING .

    INFF            reduce using rule 57 (expression -> STRING .)
    SUP             reduce using rule 57 (expression -> STRING .)
    and             reduce using rule 57 (expression -> STRING .)
    or              reduce using rule 57 (expression -> STRING .)
    SEMI            reduce using rule 57 (expression -> STRING .)
    PLUS            reduce using rule 57 (expression -> STRING .)
    MINUS           reduce using rule 57 (expression -> STRING .)
    TIMES           reduce using rule 57 (expression -> STRING .)
    DIVIDE          reduce using rule 57 (expression -> STRING .)
    ISEQUAL         reduce using rule 57 (expression -> STRING .)
    NOTEQUAL        reduce using rule 57 (expression -> STRING .)
    ET              reduce using rule 57 (expression -> STRING .)
    OU              reduce using rule 57 (expression -> STRING .)
    RACC            reduce using rule 57 (expression -> STRING .)
    RPAREN          reduce using rule 57 (expression -> STRING .)
    THEN            reduce using rule 57 (expression -> STRING .)
    NAME            reduce using rule 57 (expression -> STRING .)
    WHILE           reduce using rule 57 (expression -> STRING .)
    FOR             reduce using rule 57 (expression -> STRING .)
    COMMENTS        reduce using rule 57 (expression -> STRING .)
    IF              reduce using rule 57 (expression -> STRING .)
    PRINT           reduce using rule 57 (expression -> STRING .)
    RETURN          reduce using rule 57 (expression -> STRING .)
    FUNCTION        reduce using rule 57 (expression -> STRING .)
    DEFINE          reduce using rule 57 (expression -> STRING .)
    LPAREN          reduce using rule 57 (expression -> STRING .)
    NUMBER          reduce using rule 57 (expression -> STRING .)
    STRING          reduce using rule 57 (expression -> STRING .)
    $end            reduce using rule 57 (expression -> STRING .)
    TO              reduce using rule 57 (expression -> STRING .)
    LACC            reduce using rule 57 (expression -> STRING .)
    END             reduce using rule 57 (expression -> STRING .)
    COMMA           reduce using rule 57 (expression -> STRING .)


state 14
